k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: autoqa
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
